answers/exercise8.txt
➜  todo-backend git:(main) ✗ docker compose -f docker-compose.dev.yml up -d
[+] up 1/1
 ✔ Container todo-backend-mongo-1 Started                                                                                                         0.1s
➜  todo-backend git:(main) ✗ docker container ls
CONTAINER ID   IMAGE     COMMAND                  CREATED      STATUS         PORTS                                           NAMES
9f16f9a45d53   mongo     "docker-entrypoint.s…"   2 days ago   Up 9 seconds   0.0.0.0:3456->27017/tcp, [::]:3456->27017/tcp   todo-backend-mongo-1
➜  todo-backend git:(main) ✗ docker exec -it todo-backend-mongo-1 bash
root@9f16f9a45d53:/# mongosh
Current Mongosh Log ID: 6a222de29726321a2d3d88b2
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.8.2
Using MongoDB:          undefined
Using Mongosh:          2.8.2

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/


To help improve our products, anonymous usage data is collected and sent to MongoDB periodically (https://www.mongodb.com/legal/privacy-policy).
You can opt-out by running the disableTelemetry() command.

test> show dbs
MongoServerError[Unauthorized]: Command listDatabases requires authentication
test> -u root -p
Uncaught:
SyntaxError: Missing semicolon. (1:2)

> 1 | -u root -p
    |   ^
  2 |

test> exit
root@9f16f9a45d53:/# mongosh -u root -p example
Current Mongosh Log ID: 6a222ee1c69758f1403d88b2
Connecting to:          mongodb://<credentials>@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.8.2
Using MongoDB:          8.2.6
Using Mongosh:          2.8.2

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2026-06-05T02:00:40.761+00:00: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine. See http://dochub.mongodb.org/core/prodnotes-filesystem
   2026-06-05T02:00:40.867+00:00: For customers running the current memory allocator, we suggest changing the contents of the following sysfsFile
   2026-06-05T02:00:40.867+00:00: We suggest setting the contents of sysfsFile to 0.
   2026-06-05T02:00:40.867+00:00: We suggest setting swappiness to 0 or 1, as swapping can cause performance problems.
------

test> show dbs
admin         100.00 KiB
config         36.00 KiB
local          80.00 KiB
the_database   68.00 KiB
test> use the_database
switched to db the_database
the_database> show collections
todos
the_database> db.todos.find({})
[
  {
    _id: ObjectId('6a13b5f39160dd0ad73d88b3'),
    text: 'Write code',
    done: true
  },
  {
    _id: ObjectId('6a13b5f39160dd0ad73d88b4'),
    text: 'write code',
    done: false
  },
  {
    _id: ObjectId('6a13b90cf90d53f69878bc5e'),
    text: 'dung beatle',
    done: false,
    __v: 0
  }
]
the_database> db.todos.insertOne({"text": "Increase the number of tools in my tool belt","done": false})
{
  acknowledged: true,
  insertedId: ObjectId('6a222f47c69758f1403d88b3')
}
the_database> db.todos.find({})
[                                                                                                                                                       {
    _id: ObjectId('6a13b5f39160dd0ad73d88b3'),
    text: 'Write code',
    done: true                                                                                                                                          },                                                                                                                                                    {                                                                                                                                                       _id: ObjectId('6a13b5f39160dd0ad73d88b4'),
    text: 'write code',
    done: false
  },
  {
    _id: ObjectId('6a13b90cf90d53f69878bc5e'),
    text: 'dung beatle',
    done: false,
    __v: 0
  },
  {
    _id: ObjectId('6a222f47c69758f1403d88b3'),
    text: 'Increase the number of tools in my tool belt',
    done: false
  }
]
